oauth2/nginx/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  # namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - 
        args:
        - --provider=oidc
        - --client-id=ef73a53e-2be4-463b-a033-bbf16b6a9c3f
        - --client-secret=u~vI1-GpIu5~Q7B034FCRp.tpHQ_4pz1Qo
        # - --oidc-issuer-url=https://sts.windows.net/d400665f-0274-46fe-899b-38ed0885144a/
        - --oidc-issuer-url=https://login.microsoftonline.com/d400665f-0274-46fe-899b-38ed0885144a/v2.0
        - --email-domain=*
        - --cookie-secret=7hYf2ISft1z4DBUU8q6LOg==
        - --scope=openid
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        # Register a new application
        # https://github.com/settings/applications/new
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  # namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
